# Melisma

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
Melisma/: CMakeLists.txt  todo.h
Melisma/dependencies/glad/include/glad/: glad.h
Melisma/dependencies/glad/src/: glad.c
Melisma/dependencies/stbi/: stb_impl.cpp
Melisma/include/: melisma.h
Melisma/include/melisma/: application.h  core.h  delta_time.h  mousecodes.h  pointers.h  profile_thread.h  window.h
Melisma/include/melisma/event/: event.h  eventfn_invokable.h  key_event.h  mouse_event.h  window_event.h
Melisma/include/melisma/input/: input.h  keycodes.h  mousecodes.h
Melisma/include/melisma/layer/: layer.h  layer_stack.h
Melisma/include/melisma/rendering/: camera.h  index_buffer.h  renderer2D.h  shader_program.h  texture.h  vertex.h  vertex_array_object.h  vertex_attribute.h  vertex_buffer.h  vertex_buffer_layout.h  viewport.h
Melisma/include/melisma/src/: application.cpp  window.cpp
Melisma/include/melisma/src/layer/: layer.cpp  layer_stack.cpp
Melisma/include/melisma/src/rendering/: glcall.h  index_buffer.cpp  renderer2D.cpp  shader_program.cpp  (+4 more)
Melisma/lib/Debug/: Melisma.idb  RenderLib.idb  RenderLib.lib
Melisma/lib/Release/: Melisma.lib  RenderLib.lib
Melisma/src/: application.cpp  window.cpp
Melisma/src/input/: input.cpp
Melisma/src/layer/: layer.cpp  layer_stack.cpp
Melisma/src/rendering/: camera.cpp  glcall.cpp  glcall.h  index_buffer.cpp  renderer2D.cpp  shader_program.cpp  texture.cpp  vertex_array_object.cpp  vertex_buffer.cpp  vertex_buffer_layout.cpp
(+5 files in other folders)
